tests/NormalTests/paczka2/big_fuzzy/45380950.err
Error in line 13: dBoorMc A537 90,0
Error in line 23: hu0Z S870 68,2
Error in line 7: X6cn A537 35,5
Error in line 26: dBoorMc A537 28,0
Error in line 25: X6cn A606 46,7
Error in line 27: erJpRgYdyw A537 151,9
Error in line 42: 2HegE0MHN S870 26,8
Error in line 45: 9ufbyY A537 52,1
Error in line 53: X6cn A606 22,8
Error in line 51: A499 A606 56,8
Error in line 64: A499 A499 45,9
Error in line 80: erJpRgYdyw A499 81,2
Error in line 76: dBoorMc A606 14,3
Error in line 88: dBoorMc A499 99,2
Error in line 85: erJpRgYdyw S870 53,2
Error in line 97: erJpRgYdywÜA537Ü27,5
Error in line 105: hu0Z A537 49,0
Error in line 102: 9ufbyY S870 52,3
Error in line 104: 2HegE0MHN S870 11,2
Error in line 116: dBoorMc S870 76,6
Error in line 115: 2HegE0MHN A606 10,3
Error in line 142: 2HegE0MHN A537 -1,3
Error in line 119: dBoorMc A537 18,9
Error in line 148: hu0Z A606 67,9
Error in line 150: hu0Z S870 59,2
Error in line 139: 2HegE0MHN A537 24,8
Error in line 153: 2HegE0MHN A606 70,1
Error in line 149: 9ufbyY S870 24,7
Error in line 154: 2HegE0MHN S870 90,8
Error in line 155: 9ufbyY A499 90,5
Error in line 159: 9ufbyY A537 30,2
Error in line 167: hu0Z A499 -2,9
Error in line 168: erJpRgYdyw A606 97,67
Error in line 163: erJpRgYdyw A606 98,0
Error in line 172: dBoorMc A499 33,9
Error in line 186: dBoorMc A606 8,8
Error in line 193: A499 A537 63,9
Error in line 198: hu0Z A537 39,7
Error in line 190: dBoorMc A537 5,2
Error in line 206: X6cn A537 76,88
Error in line 204: erJpRgYdyw A499 67,1
Error in line 197: X6cn A537 32,7
Error in line 209: X6cn A499 1,6
Error in line 199: hu0Z A499 17,0
Error in line 214: hu0Z S870 90,7
Error in line 224: hu0Z A606 27,2
Error in line 227: erJpRgYdyw A499 -1,2
Error in line 219: erJpRgYdyw A499 78,3
Error in line 225: hu0Z A537 69,0
Error in line 230: erJpRgYdyw A537 1,2
Error in line 229: 9ufbyY A537 16,6
